Version 0.4.9 (2012-10-01)
--------------------------
Serde: fixed bug where row not nulled if a critical field un-parseable
Serde: improved test suite

Version 0.4.8 (2012-09-14)
--------------------------
Serde: added support for /i as well as /ice.png (issue #35)
Serde: added support for new (2012-09-12) CloudFront format
Serde: handles Cf bucket with Forward Query String = yes (issue #39) 
Serde: made marketing attribution parsing more robust

Version 0.4.7 (2012-09-05)
--------------------------
snowplow.js: bump to version 0.6
snowplow.js: added setSiteId functionality
snowplow.js: added ecommerce tracking

Version 0.4.6 (2012-08-18)
--------------------------
snowplow.js: added setCollectorUrl functionality

Version 0.4.5 (2012-08-03)
--------------------------
Serde: upgraded httpclient and tweaked URL code (issue #15)
Serde: now extracting our 5 marketing fields (issue #12)
Serde: added support for client-timestamp (issue #18)
Serde: now stripping line breaks (issue #23)

Version 0.4.4 (2012-07-28)
--------------------------
Restructured into 5 sub-systems
Updated README to explain sub-systems

Version 0.4.3 (2012-07-02)
--------------------------
Removed status code checks from Serde
Serde now outputs into /upload folder (to be uploaded by SnowPlow::Etl Ruby gem)

Version 0.4.2 (2012-06-19)
--------------------------
Moved serde into /hive from own repo

Version 0.4.1 (2012-06-16)
--------------------------
Updated serde to 0.4.4
Moved documentation to wiki

Version 0.4.0 (2012-05-30)
--------------------------
Improved names of querystring params
Added page-url to QS as fallback
Added Hive Deserializer as submodule
Documentation updates

Version 0.3.0 (2012-05-18)
--------------------------
Mostly documentation

Version 0.2.0
-------------
Formalised minification process

Version 0.1.0
-------------
Initial release of SnowPlow.js