@@ -1,7 +1,10 @@
 Version 0.4.9 (2012-10-01)
 --------------------------
 Serde: fixed bug where row not nulled if a critical field un-parseable
-Serde: improved test suite
+Serde: added support for new application ID (#33)
+Serde: added deserialization of ecommerce fields, plus tests (#34, #51)
+Serde: test suite enhancements (adding Scala helper objects)
+Serde: added tests including #13 and #10)
 
 Version 0.4.8 (2012-09-14)
 --------------------------
